Bug 1624509 - Dark mode support in simplified about:welcome r=pdahiya
Differential Revision: https://phabricator.services.mozilla.com/D68137

UltraBlame original commit: d36693bbaf559ed4d3e67d1951aed6b58e564a9f

--- a/browser/components/newtab/aboutwelcome/content/aboutwelcome.css
+++ b/browser/components/newtab/aboutwelcome/content/aboutwelcome.css
@@ -113,7 +113,7 @@ background
 color
 :
 #
-F9F9FA
+EDEDF0
 ;
 -
 -
@@ -201,19 +201,6 @@ color
 :
 #
 2B2156
-;
--
--
-welcome
--
-cards
--
-background
--
-color
-:
-#
-EDEDF0
 ;
 -
 -
@@ -367,23 +354,6 @@ color
 #
 002275
 ;
-background
--
-color
-:
-var
-(
--
--
-welcome
--
-cards
--
-background
--
-color
-)
-;
 font
 -
 family
@@ -417,6 +387,243 @@ size
 position
 :
 relative
+;
+color
+:
+var
+(
+-
+-
+newtab
+-
+text
+-
+primary
+-
+color
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+color
+)
+;
+}
+body
+[
+lwt
+-
+newtab
+-
+brighttext
+]
+{
+-
+-
+newtab
+-
+background
+-
+color
+:
+#
+2A2A2E
+;
+-
+-
+newtab
+-
+text
+-
+primary
+-
+color
+:
+#
+F9F9FA
+;
+-
+-
+newtab
+-
+text
+-
+conditional
+-
+color
+:
+#
+F9F9FA
+;
+-
+-
+newtab
+-
+button
+-
+primary
+-
+color
+:
+#
+0060DF
+;
+-
+-
+newtab
+-
+card
+-
+background
+-
+color
+:
+#
+38383D
+;
+-
+-
+newtab
+-
+card
+-
+shadow
+:
+0
+1px
+8px
+0
+rgba
+(
+12
+12
+13
+0
+.
+2
+)
+;
+-
+-
+welcome
+-
+header
+-
+text
+-
+color
+:
+rgba
+(
+255
+255
+255
+0
+.
+6
+)
+;
+-
+-
+welcome
+-
+card
+-
+button
+-
+background
+-
+color
+:
+rgba
+(
+12
+12
+13
+0
+.
+3
+)
+;
+-
+-
+welcome
+-
+card
+-
+button
+-
+background
+-
+hover
+-
+color
+:
+rgba
+(
+12
+12
+13
+0
+.
+5
+)
+;
+-
+-
+welcome
+-
+card
+-
+button
+-
+background
+-
+active
+-
+color
+:
+rgba
+(
+12
+12
+13
+0
+.
+7
+)
+;
+-
+-
+welcome
+-
+button
+-
+box
+-
+shadow
+-
+color
+:
+rgba
+(
+249
+249
+250
+0
+.
+2
+)
 ;
 }
 .
